src/objects/NA_OHYMYM__c.object
<CustomObject>
    <description>Need Assessment Section - Optimize How You Move Your Money</description>
    <fields>
        <fullName>Choosing_credit_card__c</fullName>
        <label>Choosing credit card</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Annual Fee</fullName>
                </value>
                <value>
                    <fullName>Rewards</fullName>
                </value>
                <value>
                    <fullName>Cash Back</fullName>
                </value>
                <value>
                    <fullName>Low-Interest Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>International_transfers__c</fullName>
        <label>International transfers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Frequently, on a one-time basis</fullName>
                </value>
                <value>
                    <fullName>Frequently, on a recurring basis</fullName>
                </value>
                <value>
                    <fullName>Occasionally, on a one-time basis</fullName>
                </value>
                <value>
                    <fullName>Occasionally, on a recurring basis</fullName>
                </value>
                <value>
                    <fullName>Rarely</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NA__c</fullName>
        <label>Needs Assessment</label>
        <referenceTo>Needs_Assesment__c</referenceTo>
        <relationshipLabel>NA  Optimize How You Move Your Money</relationshipLabel>
        <relationshipName>NA_Optimize_How_You_Move_Your_Money</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pay_Individuals__c</fullName>
        <description>Pay individuals</description>
        <inlineHelpText>Pay individuals</inlineHelpText>
        <label>Pay Individuals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_OHYMYM_Payments_Transfers</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>between_Accounts__c</fullName>
        <inlineHelpText>Move money between your accounts at multiple financial institutions</inlineHelpText>
        <label>between Accounts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_OHYMYM_Payments_Transfers</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>debit_card_use__c</fullName>
        <inlineHelpText>How do you tend to use your debit card?</inlineHelpText>
        <label>debit card use</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Groceries</fullName>
                </value>
                <value>
                    <fullName>Gas Station</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>recurring_monthly_bills__c</fullName>
        <description>How do you make the following payments/transfers? Pay recurring/monthly bills</description>
        <inlineHelpText>How do you make the following: Pay recurring/monthly bills</inlineHelpText>
        <label>recurring/monthly bills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NA_OHYMYM_Payments_Transfers</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>same_day_transfers__c</fullName>
        <description>frequency of making same day transfers</description>
        <label>same day transfers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Frequently, on a one-time basis</fullName>
                </value>
                <value>
                    <fullName>Frequently, on a recurring basis</fullName>
                </value>
                <value>
                    <fullName>Occasionally, on a one-time basis</fullName>
                </value>
                <value>
                    <fullName>Occasionally, on a recurring basis</fullName>
                </value>
                <value>
                    <fullName>Rarely</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NA  Optimize How You Move Your Money</label>
    <nameField>
        <displayFormat>NAOHYMYM{000000000}</displayFormat>
        <label>Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NA  Optimize How You Move Your Money</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>